alambert    2005/10/19 05:02:21 UTC	(20051019-3009)
  Log:
  chanuser_add(), chanuser_delete(): make joins and parts trigger for internal clients, too. Add is_internal_client() to help modules differentiate between user actions and internal client actions.

  Changes:	Modified:
  +3 -0		trunk/modules/chanserv/close.c (File Modified) 
  +4 -1		trunk/modules/chanserv/main.c (File Modified) 
  +6 -0		trunk/modules/chanserv/set.c (File Modified) 
  +5 -0		trunk/src/function.c (File Modified) 
  +2 -9		trunk/src/node.c (File Modified) 


nenolod     2005/10/19 05:01:00 UTC	(20051019-3007)
  Log:
  libatheme now identifies itself as org.atheme.claro.base.
  We will now need to extract the functions out of atheme's extern.h, and into
  the bundle header.
  

  Changes:	Modified:
  +2 -2		trunk/libatheme/Makefile.in (File Modified) 
  +2 -2		trunk/libatheme/Makefile.win32 (File Modified) 
  +315 -286	trunk/src/.depend (File Modified) 
  +2 -2		trunk/src/Makefile.in (File Modified) 


nenolod     2005/10/19 04:53:56 UTC	(20051019-3005)
  Log:
  We're almost self hosting! :)
  

  Changes:	Modified:
  +5 -23	trunk/include/atheme.h (File Modified) 
  +0 -1		trunk/include/common.h (File Modified) 
  +0 -31	trunk/include/hook.h (File Deleted) 
  +0 -38	trunk/include/sockio.h (File Deleted) 
  +28 -0	trunk/libatheme/event.h (File Modified) 
  + -		trunk/libatheme/hook.h (File Added) 
  +30 -6	trunk/libatheme/org.atheme.claro.base (File Modified) 
  + -		trunk/libatheme/sockio.h (File Added) 


nenolod     2005/10/19 04:42:55 UTC	(20051019-3003)
  Log:
  More moving around :)
  

  Changes:	Modified:
  +4 -1		trunk/include/atheme.h (File Modified) 
  +21 -18	trunk/include/libatheme.h (File Deleted) 
  + -		trunk/libatheme/org.atheme.claro.base (File Added) 


nenolod     2005/10/19 04:40:25 UTC	(20051019-3001)
  Log:
  Finish move. :p
  

  Changes:	Modified:
  +1 -1		trunk/dbtool/Makefile.in (File Modified) 
  + -		trunk/libatheme/balloc.h (File Added) 